cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_xml_specifications@valid-formulation-1.5.xml.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-formulation-1.5.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.5" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <components>
    <component type="library">
      <publisher>Acme Inc</publisher>
      <group>org.example</group>
      <name>mylibrary</name>
      <version>1.0.0</version>
    </component>
  </components>
  <formulation>
    <formula bom-ref="formula-1">
      <components>
        <component type="platform" bom-ref="component-1">
          <name>Pipeline controller image</name>
          <version>v0.47.0</version>
        </component>
      </components>
      <workflows>
        <workflow bom-ref="workflow-1">
          <uid>8edb2b08-e2c7-11ed-b5ea-0242ac120002</uid>
          <name>My workflow</name>
          <description>Workflow description here</description>
          <resourceReferences>
            <resourceReference>
              <ref>component-a</ref>
            </resourceReference>
          </resourceReferences>
          <tasks>
            <task bom-ref="task-1">
              <uid>task-uid-1</uid>
              <name>fetch-repository</name>
              <description>Description here</description>
              <resourceReferences>
                <resourceReference>
                  <ref>component-a</ref>
                </resourceReference>
              </resourceReferences>
              <trigger bom-ref="trigger-1">
                <uid>trigger-1</uid>
                <type>api</type>
              </trigger>
              <steps>
                <step>
                  <name>My step</name>
                </step>
              </steps>
              <inputs>
                <input>
                  <resource>
                    <ref>component-a</ref>
                  </resource>
                </input>
              </inputs>
              <outputs>
                <output>
                  <resource>
                    <ref>component-b</ref>
                  </resource>
                </output>
              </outputs>
              <timeStart>2023-01-01T00:00:00+00:00</timeStart>
              <timeEnd>2023-01-01T00:00:00+00:00</timeEnd>
              <workspaces>
                <workspace bom-ref="workspace-1">
                  <uid>workspace-uid-1</uid>
                  <name>workspace</name>
                </workspace>
              </workspaces>
              <runtimeTopology>
                <dependency ref="component-1">
                  <dependency ref="component-2" />
                </dependency>
              </runtimeTopology>
            </task>
          </tasks>
          <taskDependencies>
            <dependency ref="task-1">
              <dependency ref="task-2" />
            </dependency>
          </taskDependencies>
          <taskTypes>
            <taskType>clean</taskType>
            <taskType>build</taskType>
          </taskTypes>
          <trigger bom-ref="trigger-2">
            <uid>trigger-uid-1</uid>
            <name>My trigger</name>
            <description>Description here</description>
            <resourceReferences>
              <resourceReference>
                <ref>component-a</ref>
              </resourceReference>
            </resourceReferences>
            <type>api</type>
            <event>
              <uid>event-1</uid>
              <description>Description here</description>
              <timeReceived>2023-01-01T00:00:00+00:00</timeReceived>
              <data>FooBar</data>
              <source>
                <ref>component-g</ref>
              </source>
              <target>
                <ref>component-h</ref>
              </target>
              <properties>
                <property name="Foo">Bar</property>
              </properties>
            </event>
            <conditions>
              <condition>
                <description>Description here</description>
                <expression>1 == 1</expression>
                <properties>
                  <property name="Foo">Bar</property>
                </properties>
              </condition>
            </conditions>
            <timeActivated>2023-01-01T00:00:00+00:00</timeActivated>
            <inputs>
              <input>
                <resource>
                  <ref>component-10</ref>
                </resource>
                <source>
                  <ref>component-11</ref>
                </source>
                <target>
                  <ref>component-12</ref>
                </target>
              </input>
            </inputs>
            <outputs>
              <output>
                <resource>
                  <ref>component-14</ref>
                </resource>
                <type>artifact</type>
                <source>
                  <ref>component-15</ref>
                </source>
                <target>
                  <ref>component-16</ref>
                </target>
              </output>
            </outputs>
            <properties>
              <property name="Foo">Bar</property>
            </properties>
          </trigger>
          <steps>
            <step>
              <commands>
                <command>
                  <executed>ls -las</executed>
                  <properties>
                    <property name="Foo">Bar</property>
                  </properties>
                </command>
              </commands>
              <description>Description here</description>
              <name>My step</name>
              <properties>
                <property name="Foo">Bar</property>
              </properties>
            </step>
          </steps>
          <inputs>
            <input>
              <environmentVars>
                <environmentVar name="Foo">Bar</environmentVar>
              </environmentVars>
            </input>
            <input>
              <environmentVars>
                <value>FooBar</value>
              </environmentVars>
            </input>
            <input>
              <environmentVars>
                <environmentVar name="Foo">Bar</environmentVar>
                <value>FooBar</value>
              </environmentVars>
            </input>
          </inputs>
          <outputs>
            <output>
              <environmentVars>
                <environmentVar name="Foo">Bar</environmentVar>
              </environmentVars>
            </output>
            <output>
              <environmentVars>
                <value>FooBar</value>
              </environmentVars>
            </output>
            <output>
              <environmentVars>
                <environmentVar name="Foo">Bar</environmentVar>
                <value>FooBar</value>
              </environmentVars>
            </output>
          </outputs>
          <timeStart>2023-01-01T00:00:00+00:00</timeStart>
          <timeEnd>2023-01-01T00:00:00+00:00</timeEnd>
          <workspaces>
            <workspace bom-ref="workspace-2">
              <uid>workspace-1</uid>
              <name>My workspace</name>
              <aliases>
                <alias>default-workspace</alias>
              </aliases>
              <description>Description here</description>
              <resourceReferences>
                <resourceReference>
                  <ref>component-t</ref>
                </resourceReference>
              </resourceReferences>
              <accessMode>read-write</accessMode>
              <mountPath>/tmp/workspace</mountPath>
              <managedDataType>ConfigMap</managedDataType>
              <volumeRequest>requestedVolumeClaim</volumeRequest>
              <volume>
                <uid>volume-1</uid>
                <name>My volume</name>
                <mode>filesystem</mode>
                <path>/</path>
                <sizeAllocated>10GB</sizeAllocated>
                <persistent>true</persistent>
                <remote>false</remote>
              </volume>
            </workspace>
          </workspaces>
          <runtimeTopology>
            <dependency ref="component-s">
              <dependency ref="component-r" />
            </dependency>
          </runtimeTopology>
          <properties>
            <property name="Foo">Bar</property>
          </properties>
        </workflow>
      </workflows>
    </formula>
  </formulation>
</bom>
