cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_xml_specifications@valid-license-licensing-1.5.xml.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-license-licensing-1.5.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.5" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <components>
    <component type="library">
      <publisher>Acme Inc</publisher>
      <group>com.acme</group>
      <name>cryptographic-provider</name>
      <version>2.2.0</version>
      <licenses>
        <license bom-ref="acme-license-1">
          <name>Acme Commercial License</name>
          <licensing>
            <altIds>
              <altId>acme</altId>
              <altId>acme-license</altId>
            </altIds>
            <licensor>
              <organization>
                <name>Acme Inc</name>
                <contact>
                  <name>Acme Licensing Fulfillment</name>
                  <email>licensing@example.com</email>
                </contact>
              </organization>
            </licensor>
            <licensee>
              <organization>
                <name>Example Co.</name>
              </organization>
            </licensee>
            <purchaser>
              <individual>
                <name>Samantha Wright</name>
                <email>samantha.wright@gmail.com</email>
                <phone>800-555-1212</phone>
              </individual>
            </purchaser>
            <purchaseOrder>PO-12345</purchaseOrder>
            <licenseTypes>
              <licenseType>appliance</licenseType>
            </licenseTypes>
            <lastRenewal>2022-04-13T20:20:39+00:00</lastRenewal>
            <expiration>2023-04-13T20:20:39+00:00</expiration>
          </licensing>
        </license>
      </licenses>
    </component>
  </components>
</bom>
