cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_xml_specifications@valid-metadata-lifecycle-1.5.xml.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
assertion_line: 29
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-metadata-lifecycle-1.5.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.5" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <metadata>
    <lifecycles>
      <lifecycle>
        <phase>build</phase>
      </lifecycle>
      <lifecycle>
        <phase>post-build</phase>
      </lifecycle>
      <lifecycle>
        <name>platform-integration-testing</name>
        <description>Integration testing specific to the runtime platform</description>
      </lifecycle>
    </lifecycles>
  </metadata>
  <components />
</bom>
