cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_xml_specifications@valid-metadata-manufacture-1.5.xml.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
assertion_line: 27
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-metadata-manufacture-1.5.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.5" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <metadata>
    <manufacture>
      <name>Acme, Inc.</name>
      <url>https://example.com</url>
      <contact>
        <name>Acme Professional Services</name>
        <email>professional.services@example.com</email>
      </contact>
    </manufacture>
  </metadata>
  <components />
</bom>
